--- a/package.json
+++ b/package.json
@@ -13,38 +13,36 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@nuxt/typescript-runtime": "^0.4.6",
+    "@nuxt/typescript-runtime": "^0.4.8",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/prismic": "^1.2.1",
     "@nuxtjs/style-resources": "^1.0.0",
     "bulma": "^0.8.2",
     "lodash": "^4.17.15",
-    "moment": "^2.25.3",
+    "moment": "^2.26.0",
     "nuxt": "^2.12.2",
     "nuxt-property-decorator": "^2.7.2",
     "prismic-dom": "^2.2.3",
     "prismic-javascript": "^2.7.1",
     "prismic-vue": "^2.0.1",
-    "slugify": "^1.4.0",
-    "swiper": "^5.3.8",
-    "vuex-module-decorators": "^0.17.0"
+    "swiper": "^5.4.1"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.6",
-    "@nuxtjs/eslint-config-typescript": "^1.0.2",
-    "@nuxtjs/stylelint-module": "^3.2.2",
-    "@types/node": "^13.13.5",
+    "@nuxt/typescript-build": "^1.0.1",
+    "@nuxtjs/eslint-config-typescript": "^2.0.0",
+    "@nuxtjs/stylelint-module": "^4.0.0",
+    "@types/node": "^14.0.5",
     "@types/prismic-dom": "^2.1.1",
-    "@vue/test-utils": "^1.0.2",
+    "@vue/test-utils": "^1.0.3",
     "babel-jest": "^26.0.1",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "jest": "^26.0.1",
     "node-sass": "^4.14.1",
-    "pug": "^2.0.4",
+    "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
-    "stylelint": "^13.3.3",
-    "ts-jest": "^25.5.1",
+    "stylelint": "^13.5.0",
+    "ts-jest": "^26.0.0",
     "vue-jest": "^4.0.0-0"
   }
 }
